--- a/.devcontainer/Dockerfile_for_normal_people
+++ b/.devcontainer/Dockerfile_for_normal_people
@@ -17,4 +17,4 @@ RUN pip3 install --no-cache-dir -r requirements.txt
 EXPOSE 8501
 
 # Run the command to start the app
-CMD ["streamlit", "run", "app.py"]
+# CMD ["streamlit", "run", "app.py"]
