--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,7 +11,7 @@ repos:
     rev: 1.7.0
     hooks:
     -   id: bandit
--   repo: https://github.com/econchick/interrogate
-    rev: 2.3.1
-    hooks:
-    -   id: interrogatepre-commit --version
+# -   repo: https://github.com/econchick/interrogate
+#     rev: 2.3.1
+#     hooks:
+#     -   id: interrogatepre-commit --version
