--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,17 +1,18 @@
 repos:
--   repo: https://github.com/PyCQA/isort
-    rev: 5.9.3
+  - repo: local
     hooks:
-    -   id: isort
--   repo: https://github.com/psf/black
-    rev: 21.9b0
-    hooks:
-    -   id: black
--   repo: https://github.com/PyCQA/bandit
-    rev: 1.7.0
-    hooks:
-    -   id: bandit
-# -   repo: https://github.com/econchick/interrogate
-#     rev: 2.3.1
-#     hooks:
-#     -   id: interrogatepre-commit --version
+      - id: isort
+        name: isort
+        entry: isort .
+        language: system
+        types: [python]
+      - id: black
+        name: black
+        entry: black .
+        language: system
+        types: [python]
+      - id: bandit
+        name: bandit
+        entry: bandit .
+        language: system
+        types: [python]
